--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "test_scores",
+            "request": "launch",
+            "mainClass": "_01_double._2_test_scores.test_scores",
+            "projectName": "Level0-Module4_26c0ea09"
+        },
+        {
+            "type": "java",
             "name": "ChangeCalculator",
             "request": "launch",
             "mainClass": "_01_double._1_change_calculator.ChangeCalculator"
